# rcrust

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
.claude/projects/-home-justin-projects-4_read_adc/memory/: MEMORY.md  feedback_minimal_changes.md
src/: axes.rs  axis.rs  calibration.rs  controller_state.rs  display.rs  filter.rs  hardware_context.rs  init.rs  lib.rs  main.rs  menus.rs  radio.rs  serial.rs  system_mode.rs  system_state.rs
src/axis/: acquisition.rs  axis.rs  calibration.rs  filtering.rs  mod.rs  raw_axes.rs
src/hardware/: context.rs  init.rs  mod.rs  radio.rs
src/signal/: axes.rs  mod.rs  processing.rs
