[package]
edition      = "2024"
name         = "read_gpio"
rust-version = "1.88"
version      = "0.1.0"
default-run  = "rcrust"

[[bin]]
name = "rcrust"
path = "./src/main.rs"

[dependencies]
embassy-stm32 = { version = "0.2", features = ["stm32f401rc", "time-driver-any"] }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.4"
embassy-usb = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
static_cell = "2"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
